# laams

./: Cargo.toml  README.md
class_management_system/: Cargo.toml  build.rs
class_management_system/proto/class/: processor_service.proto
class_management_system/src/: domain.rs
class_management_system/src/domain/: class.rs  shared.rs
class_management_system/src/domain/class/: entities.rs  enums.rs  shared.rs
class_management_system/src/domain/class/entities/: lesson.rs  lesson_content.rs  media_content.rs  subject.rs
class_management_system/src/domain/class/enums/: media_type.rs
class_management_system/src/domain/class/shared/: entities.rs  enums.rs
class_management_system/src/domain/shared/: enums.rs  user.rs  values.rs
class_management_system/src/domain/shared/enums/: currency_type.rs
class_management_system/src/domain/shared/user/: entities.rs  enums.rs
class_management_system/src/domain/shared/values/: currency.rs
portfolio/: Cargo.toml
portfolio/src/: domain.rs  infrastructure.rs  main.rs
portfolio/src/application/: common.rs  task.rs
portfolio/src/application/common/: persistence.rs
portfolio/src/application/task/commands/: create.rs
portfolio/src/domain/: common.rs  task.rs
portfolio/src/domain/common/: entities.rs  enums.rs  error.rs  models.rs  values.rs
portfolio/src/domain/task/: enums.rs  values.rs
portfolio/src/infrastructure/: persistence.rs
portfolio/src/infrastructure/controllers/: task.rs
portfolio/src/presentation/: rest.rs
portfolio/src/presentation/rest/: error.rs  result.rs  routers.rs  state.rs
(+23 files in other folders)
