[package]
name = "portfolio"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.4.0"
async-trait = "0.1.74"
chrono = { version = "0.4.31", features = ["serde"] }
future-utils = "0.12.1"
futures-util = "0.3.29"
serde = { version = "1.0.192", features = ["derive"] }
serde_json = "1.0.108"

[dev-dependencies]
httpc-test = "0.1.7"
